--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,940 @@
+/* #Fonts
+================================================== */
+@font-face {
+  font-family: "almoni";
+  font-weight: 200;
+  src: url("../font/almoni-neue-light-aaa.woff");
+}
 
+@font-face {
+  font-family: "almoni";
+  font-weight: 400;
+  src: url("../font/almoni-neue-regular-aaa.woff");
+}
+
+@font-face {
+  font-family: "almoni";
+  font-weight: 500;
+  src: url("../font/almoni-neue-demibold-aaa.woff");
+}
+
+@font-face {
+  font-family: "almoni";
+  font-weight: 700;
+  src: url("../font/almoni-neue-bold-aaa.woff");
+}
+
+/* #Global
+================================================== */
+body {
+  font-family: 'almoni', sans-serif;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+/* #Btn
+================================================== */
+.btn {
+  height: 2.6vw;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.197vw;
+  font-weight: 500;
+  border-radius: 500px;
+  padding: 0 2.5vw;
+}
+
+.btn-primary {
+  background-image: linear-gradient(to top right, #93FF00, #A0F3BD, #84FFE4);
+  color: black;
+}
+
+@media (max-width: 1023.98px) {
+  .btn {
+    height: 9.33vw;
+    font-size: 4vw;
+    padding: 0 10vw;
+  }
+}
+
+/* #Link
+================================================== */
+.link {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  padding-bottom: .15vw;
+}
+
+.link.link-white {
+  color: white;
+}
+
+.link img {
+  width: 1vw;
+  margin-right: .6vw;
+}
+
+.link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  transform: scaleX(0);
+  transition: transform 0.4s ease;
+}
+
+.link:hover::before {
+  transform: scaleX(1);
+}
+
+.link.link-white::before {
+  background-color: white;
+}
+
+@media (max-width: 1023.98px) {
+  .link {
+    padding-bottom: 1vw;
+  }
+
+  .link img {
+    width: 2.93vw;
+    margin-right: 1.33vw;
+  }
+}
+
+/* #Input
+================================================== */
+.input-primary {
+  border: none;
+  border-bottom: 2px solid black;
+  color: black;
+  padding-bottom: .25vw;
+  width: 100%;
+}
+
+.input-primary::placeholder {
+  color: black;
+}
+
+@media (max-width: 1023.98px) {
+  .input-primary {
+    border-bottom: 1px solid #B1B1B1;
+    padding-bottom: 1vw;
+  }
+}
+
+/* #Select
+================================================== */
+.select-primary {
+  border: none;
+  border-bottom: 2px solid black;
+  color: black;
+  appearance: none;
+  background-image: url('../img/icons/chevron-down.svg');
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  background-size: .78vw auto;
+  padding-bottom: .25vw;
+  width: 100%;
+}
+
+@media (max-width: 1023.98px) {
+  .select-primary {
+    border-bottom: 1px solid #B1B1B1;
+    background-size: 2.93vw auto;
+    padding-bottom: 1vw;
+  }
+}
+
+/* #Checkbox
+================================================== */
+.checkbox input {
+  width: .83vw;
+  height: .83vw;
+  border-radius: 50%;
+  border-color: #071b1b;
+  border-width: 1px;
+  flex: 0 0 .83vw;
+  margin-top: .25vw;
+}
+
+.checkbox input:checked {
+  border-color: #071b1b;
+  background-color: #071b1b;
+  background-image: none;
+}
+
+.checkbox label {
+  padding-right: .5vw;
+  line-height: 1.25;
+  display: flex;
+  align-items: flex-start;
+}
+
+@media (max-width: 1023.98px) {
+  .checkbox input {
+    width: 2vw;
+    height: 2vw;
+    border-width: 1px;
+    flex: 0 0 2vw;
+    margin-top: 1.4vw;
+  }
+
+  .checkbox label {
+    padding-right: 1.33vw;
+  }
+}
+
+/* #Footer
+================================================== */
+.footer {
+  background-color: black;
+  color: white;
+  padding: 6.25vw 0 7.8vw 0;
+  position: relative;
+}
+
+.footer .container {
+  width: 74%;
+}
+
+.footer-logo {
+  margin-bottom: 0;
+}
+
+.footer-logo img {
+  width: 4.84vw;
+}
+
+.footer-links ul {
+  display: flex;
+}
+
+.footer-links ul li:not(:last-child) {
+  margin-left: 5.2vw;
+}
+
+.footer-links ul p:not(:last-child) {
+  margin-bottom: .6vw;
+}
+
+.footer-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social {
+  flex: 0 0 100%;
+  margin-top: 1.8vw;
+}
+
+.social ul {
+  display: flex;
+  align-items: center;
+}
+
+.social li:not(:last-child) {
+  margin-left: .78vw;
+}
+
+.social img {
+  width: 2.34vw;
+}
+
+.back-to-top {
+  position: absolute;
+  top: 6.25vw;
+  right: 4.95vw;
+}
+
+.back-to-top img {
+  width: 3.125vw;
+}
+
+@media (min-width: 1024px) {
+  .footer-top {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .footer-bottom {
+    border-top: 1px solid white;
+    padding-top: 1.3vw;
+    margin-top: 1.3vw;
+  }
+}
+
+@media (max-width: 1023.98px) {
+  .footer {
+    padding: 12.26vw 0;
+  }
+
+  .footer .container {
+    width: 100%;
+  }
+
+  .footer-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer-logo {
+    margin-bottom: 17.33vw;
+  }
+
+  .footer-logo img {
+    width: 34.8vw;
+  }
+
+  .footer-links {
+    margin-bottom: 20vw;
+    border-top: none;
+    border-bottom: none;
+    padding: 0;
+    text-align: center;
+  }
+
+  .footer-links ul {
+    display: block;
+    line-height: 1;
+  }
+
+  .footer-links ul li:not(:last-child) {
+    margin-left: 0;
+    margin-bottom: 6.5vw;
+  }
+
+  .footer-links ul p:not(:first-child) {
+    display: none;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .footer-bottom p {
+    margin-bottom: 2.66vw;
+  }
+
+  .social {
+    margin-bottom: 7.33vw;
+  }
+
+  .social li:not(:last-child) {
+    margin-left: 3.73vw;
+  }
+
+  .social img {
+    width: 10.93vw;
+  }
+
+  .back-to-top {
+    top: 10vw;
+    right: 8.5vw;
+  }
+  
+  .back-to-top img {
+    width: 13.33vw;
+  }
+}
+
+/* #Home Banner
+================================================== */
+.home-banner {
+  position: relative;
+}
+
+.home-banner > .img img,
+.home-banner > .img picture {
+  width: 100%;
+}
+
+.home-banner > .text {
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12vw;
+}
+
+.home-banner > .text h1 {
+  line-height: 1;
+}
+
+.home-banner > .text p {
+  width: 20.8vw;
+  margin-top: .5vw;
+  margin-bottom: 2vw;
+}
+
+.home-banner .cards {
+  display: flex;
+  position: absolute;
+  bottom: 1.3vw;
+  left: 1.3vw;
+}
+
+.home-banner .card {
+  display: flex;
+  align-items: center;
+  background-color: black;
+  color: white;
+}
+
+.home-banner .card:first-child {
+  margin-left: 1.3vw;
+}
+
+.home-banner .card .img img {
+  width: 14.11vw;
+  height: 12.3vw;
+  object-fit: cover;
+  object-position: center;
+}
+
+.home-banner .card .text {
+  width: 12.3vw;
+  flex-shrink: 0;
+  padding: 0 1.25vw;
+  text-align: center;
+}
+
+.home-banner .card .text p {
+  padding: .5vw 0 .75vw;
+}
+
+.home-banner .card .logo img {
+  margin: 0 auto;
+  width: 6.25vw;
+}
+
+@media (max-width: 1023.98px) {
+  .home-banner > .text {
+    top: 40vw;
+    transform: translateX(-50%);
+    right: auto;
+    left: 50%;
+    text-align: center;
+    width: 78%;
+  }
+  
+  .home-banner > .text p {
+    width: 100%;
+    margin-top: 2vw;
+    margin-bottom: 4vw;
+  }
+
+  .home-banner .cards {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 1.33vw;
+  }
+  
+  .home-banner .card {
+    flex-grow: 1;
+    position: relative;
+  }
+  
+  .home-banner .card:first-child {
+    margin-left: 1.33vw;
+  }
+  
+  .home-banner .card .img img {
+    width: 100%;
+    height: 50.66vw;
+  }
+
+  .home-banner .card .img {
+    position: relative;
+  }
+
+  .home-banner .card .img::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, black, transparent);
+  }
+  
+  .home-banner .card .text {
+    width: 38vw;
+    flex-shrink: 0;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    bottom: 5.33vw;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  
+  .home-banner .card .text p {
+    padding: 1vw 0 2vw;
+  }
+  
+  .home-banner .card .logo img {
+    margin: 0 auto;
+    width: 22vw;
+  }
+}
+
+/* #Post Slider
+================================================== */
+.post-slider {
+  padding: 6.25vw 0;
+  overflow: hidden;
+}
+
+.post-slider .container {
+  margin-right: 2vw;
+}
+
+.post-slider .heading {
+  text-align: center;
+  margin-bottom: 2.6vw;
+  padding-left: 2vw;
+}
+
+.post-slider h2 {
+  line-height: 1;
+}
+
+.post-slider .swiper-slide {
+  padding-left: 2vw;
+}
+
+.post-slider .swiper {
+  padding-bottom: 3.33vw;
+  overflow: visible;
+}
+
+.post-slider .swiper-horizontal>.swiper-pagination-progressbar,
+.post-slider .swiper-pagination-progressbar.swiper-pagination-horizontal,
+.post-slider .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite,
+.post-slider .swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite {
+  width: 35.15vw;
+  height: 3px;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  top: auto;
+  margin-left: 2vw;
+}
+
+.post-slider .swiper-pagination-progressbar {
+  background: #EDEDED;
+}
+
+.post-slider .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
+  background: black;
+}
+
+.post-slider .container > .text-center a {
+  margin-top: 1.3vw;
+}
+
+@media (max-width: 1023.98px) {
+  .post-slider {
+    padding: 16.66vw 0;
+  }
+
+  .post-slider .container {
+    margin-right: 5.33vw;
+  }
+
+  .post-slider .heading {
+    padding-left: 5.33vw;
+    margin-bottom: 5.73vw;
+  }
+
+  .post-slider h2 {
+    margin-bottom: .5vw;
+  }
+
+  .post-slider .swiper-slide {
+    padding-left: 5.33vw;
+  }
+
+  .post-slider .swiper {
+    padding-bottom: 7.45vw;
+  }
+
+  .post-slider .swiper-horizontal>.swiper-pagination-progressbar,
+  .post-slider .swiper-pagination-progressbar.swiper-pagination-horizontal,
+  .post-slider .swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite,
+  .post-slider .swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite {
+    width: 58.66vw;
+    margin-left: 5.33vw;
+  }
+
+  .post-slider .container > .text-center a {
+    margin-top: 4vw;
+  }
+}
+
+/* #Blog Post Card
+================================================== */
+.blog-post-card .img {
+  margin-bottom: 2vw;
+}
+
+.blog-post-card .img img {
+  width: 100%;
+  height: 20.93vw;
+  border-radius: .5vw;
+  object-fit: cover;
+  object-position: center;
+}
+
+.blog-post-card .text p {
+  line-height: 1.36;
+  margin: .5vw 0 1.3vw 0;
+}
+
+@media (max-width: 1023.98px) {
+  .blog-post-card .img {
+    margin-bottom: 4.66vw;
+  }
+  
+  .blog-post-card .img img {
+    height: 53.6vw;
+    border-radius: 1.33vw;
+  }
+
+  .blog-post-card .text {
+    padding-left: 2.66vw;
+  }
+
+  .blog-post-card .text h3 {
+    line-height: 1;
+  }
+  
+  .blog-post-card .text p {
+    line-height: 1.36;
+    margin: 1.33vw 0 3.33vw 0;
+  }
+}
+
+/* #Solutions Card
+================================================== */
+.solutions-card {
+  position: relative;
+}
+
+.solutions-card .img {
+  border-radius: .5vw;
+  overflow: hidden;  
+}
+
+.solutions-card .img img {
+  width: 100%;
+  height: 33.85vw;
+  object-fit: cover;
+  border-radius: .5vw;
+}
+
+.solutions-card .text {
+  position: absolute;
+  top: 1.8vw;
+  right: 1.8vw;
+  width: 20vw;
+  color: white;
+  z-index: 2;
+}
+
+.solutions-card h3 {
+  line-height: 1;
+  margin-bottom: .6vw;
+  transition: all .4s ease;
+}
+
+@media (min-width: 1024px) {
+  .solutions-card .img {
+    position: relative;
+  }
+  
+  .solutions-card .img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, #93FF00, #A0F3BD, #84FFE4);
+    z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .4s ease;
+  }
+  
+  .solutions-card .img::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, #FFFFFF, transparent);
+    visibility: hidden;
+    opacity: 0;
+    transition: all .4s ease;
+  }
+
+  .solutions-card:hover .img::after,
+  .solutions-card:hover .img::before {
+    visibility: visible;
+  }
+  
+  .solutions-card:hover .img::after {
+    opacity: .6;
+  }
+  
+  .solutions-card:hover .img::before {
+    opacity: 1;
+  }
+  
+  .solutions-card:hover .text {
+    color: black;
+  }
+  
+  .solutions-card .text p {
+    opacity: 0;
+    visibility: hidden;
+    transition: all .4s ease;
+    color: black;
+  }
+  
+  .solutions-card:hover .text p {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@media (max-width: 1023.98px) {
+  .solutions-card .img {
+    position: relative;
+    border-radius: 1.33vw;
+    overflow: hidden;
+  }
+  
+  .solutions-card .img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, black, transparent);
+    opacity: .7;
+    z-index: 1;
+  }
+
+  .solutions-card .img img {
+    height: 86.66vw;
+    border-radius: 1.33vw;
+  }
+
+  .solutions-card .text {
+    top: 5.33vw;
+    right: 4.66vw;
+    width: 59vw;
+  }
+
+  .solutions-card h3 {
+    width: 75%;
+    margin-bottom: 2vw;
+  }
+
+  .solutions-card p {
+    line-height: 1.16;
+  }
+}
+
+/* #App Banner
+================================================== */
+.app-banner {
+  position: relative;
+}
+
+.app-banner .img img,
+.app-banner .img picture {
+  width: 100%;
+}
+
+.app-banner .text {
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 53.5vw;
+  width: 18.85vw;
+}
+
+.app-banner h2 {
+  line-height: 1;
+  margin-bottom: .25vw;
+}
+
+.app-banner p {
+  line-height: 1.36;
+  margin-bottom: 2.5vw;
+}
+
+.app-banner .imgs {
+  display: flex;
+}
+
+.app-banner .imgs img {
+  width: 8.85vw;
+}
+
+.app-banner .imgs a:not(:last-child) {
+  margin-left: 1.3vw;
+}
+
+@media (max-width: 1023.98px) {
+  .app-banner .text {
+    top: 8.66vw;
+    transform: translateX(50%);
+    right: 50%;
+    width: 73.33vw;
+    text-align: center;
+  }
+  
+  .app-banner h2 {
+    margin-bottom: 1vw;
+  }
+  
+  .app-banner p {
+    line-height: 1;
+    margin-bottom: 3.33vw;
+  }
+  
+  .app-banner .imgs {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .app-banner .imgs img {
+    width: 22.6vw;
+  }
+  
+  .app-banner .imgs a:not(:last-child) {
+    margin-left: 3.5vw;
+  }
+}
+
+/* #Contact Form
+================================================== */
+.contact-form {
+  padding: 4.4vw 0;
+}
+
+.contact-form .container {
+  width: 38.8%;
+}
+
+.contact-form .heading {
+  text-align: center;
+  margin-bottom: 2.34vw;
+}
+
+.contact-form .heading p {
+  width: 18.75vw;
+  margin: 0 auto;
+}
+
+.contact-form form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: -1.25vw;
+}
+
+.contact-form form>* {
+  flex: 0 0 47%;
+  margin-bottom: 1.25vw;
+}
+
+.contact-form form>*:last-child {
+  flex: 0 0 100%;
+}
+
+.contact-form-btn {
+  text-align: center;
+  margin-top: 1.3vw;
+}
+
+.contact-form .checkboxes {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 1vw;
+}
+
+.contact-form .checkboxes > *:not(:last-child) {
+  margin-left: 1.3vw;
+}
+
+@media (max-width: 1023.98px) {
+  .contact-form {
+    padding: 16.66vw 0 20vw 0;
+  }
+
+  .contact-form .container {
+    width: 70%;
+  }
+
+  .contact-form .heading {
+    text-align: center;
+    margin-bottom: 4vw;
+  }
+
+  .contact-form .heading p {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .contact-form form {
+    margin-bottom: -4vw;
+  }
+
+  .contact-form form>* {
+    margin-bottom: 4vw;
+    flex: 0 0 100%;
+  }
+
+  .contact-form form>*:nth-child(5),
+  .contact-form form>*:nth-child(6) {
+    flex: 0 0 100%;
+  }
+
+  .contact-form-btn {
+    margin-top: 8vw;
+  }
+
+  .contact-form .checkboxes {
+    margin-top: 5vw;
+  }
+  
+  .contact-form .checkboxes > *:not(:last-child) {
+    margin-left: 4.66vw;
+  }
+}
