[ADD] - FAQ Page

--- a/css/style.css
+++ b/css/style.css
@@ -2652,3 +2652,138 @@ body {
     margin-bottom: 4vw;
   }
 }
+
+/* #FAQ
+================================================== */
+.faq-page {
+  padding-top: 6.35vw;
+}
+
+.faq {
+  padding: 3.9vw 0 1.85vw 0;
+}
+
+.faq .container {
+  width: 87.4%;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Sidebar */
+.faq .sidebar {
+  flex: 0 0 30.36vw;
+}
+
+/* Main */
+.faq .main {
+  flex-grow: 1;
+}
+
+.faq .accordion {
+  border-top: 1px solid #D6D6D6;
+}
+
+.faq .collapsible {
+  border-bottom: 1px solid #D6D6D6;
+  padding: 1.66vw 0;
+}
+
+.faq .collapse > div {
+  width: 33.33vw;
+  line-height: 1.5;
+  margin-right: 5.2vw;
+  padding-top: 1vw;
+}
+
+.faq .collapse-toggler {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+}
+
+.faq .collapse-toggler .icon img {
+  width: 2.8vw;
+  margin-left: 2.4vw;
+}
+
+.faq .collapse-toggler .arrow {
+  margin-right: auto;
+}
+
+.faq .collapse-toggler .arrow img {
+  width: .87vw;
+  transition: all .4s ease;
+}
+
+.faq .collapsible.show .collapse-toggler .arrow img {
+  transform: rotate(180deg);
+}
+
+.faq .collapse-toggler .text {
+  flex: 0 0 32.96vw;
+}
+
+@media (max-width: 1023.98px) {
+  .faq-page {
+    padding-top: 19.36vw;
+  }
+  
+  .faq {
+    padding: 4vw 0 0 0;
+  }
+  
+  .faq .container {
+    width: 90%;
+    display: block;
+  }
+  
+  /* Sidebar */
+  .faq .sidebar {
+    margin-bottom: 11.33vw;
+  }
+  
+  .faq h1 {
+    text-align: center;
+    margin-bottom: 6vw;
+  }
+  
+  /* Main */
+  .faq .collapsible {
+    padding: 4.26vw 0;
+  }
+  
+  .faq .collapse > div {
+    width: 78vw;
+    line-height: 1.16;
+    margin-right: 0;
+    padding-top: 1.33vw;
+  }
+  
+  .faq .collapse-toggler {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .faq .collapse-toggler .icon {
+    flex: 0 0 100%;
+  }
+  
+  .faq .collapse-toggler .icon img {
+    width: 7.2vw;
+    margin-left: 0;
+    margin-bottom: 2.5vw;
+  }
+  
+  .faq .collapse-toggler .arrow {
+    margin-right: auto;
+  }
+  
+  .faq .collapse-toggler .arrow img {
+    width: 3.73vw;
+  }
+
+  .faq .collapse-toggler .text {
+    flex: 0 0 78.66vw;
+  }
+}
