--- a/css/style.css
+++ b/css/style.css
@@ -3672,3 +3672,74 @@ body {
     line-height: 1.3;
   }
 }
+
+/* #Text Page Content
+================================================== */
+.text-page-content {
+  padding: 8.43vw 0 6.77vw 0;
+  border-bottom: 1px solid #D6D6D6;
+}
+
+.text-page-content .container {
+  width: 46.5%;
+}
+
+.text-page-content h1 {
+  margin-bottom: 2.34vw;
+}
+
+.text-page-content .group:not(:last-child) {
+  margin-bottom: 1.8vw;
+}
+
+.text-page-content h2 {
+  margin-bottom: .78vw;
+}
+
+.text-page-content p,
+.text-page-content ul {
+  line-height: 1.5;
+  margin-bottom: .78vw;
+}
+
+.text-page-content ul {
+  list-style: initial;
+  padding-right: 19px;
+}
+
+.text-page-content ul li:not(:last-child) {
+  margin-bottom: .78vw;
+}
+
+@media (max-width: 1023.98px) {
+  .text-page-content {
+    padding: 23.33vw 0 16vw 0;
+  }
+  
+  .text-page-content .container {
+    width: 90%;
+  }
+  
+  .text-page-content h1 {
+    text-align: center;
+    margin-bottom: 7.33vw;
+  }
+  
+  .text-page-content .group:not(:last-child) {
+    margin-bottom: 8vw;
+  }
+  
+  .text-page-content h2 {
+    margin-bottom: 2.66vw;
+  }
+  
+  .text-page-content p,
+  .text-page-content ul {
+    line-height: 1.16;
+    margin-bottom: 2vw;
+  }
+  
+  .text-page-content ul li:not(:last-child) {
+    margin-bottom: 2vw;
+  }
+}
